--- a/conda.yaml
+++ b/conda.yaml
@@ -13,3 +13,4 @@ dependencies:
       # Define pip packages here.
       # https://pypi.org/
       - rpaframework==12.9.0 # https://rpaframework.org/releasenotes.html
+      - pandas==1.4.1
